# esp-rx480e-wq-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
boards/esp32-c3/: Cargo.toml
boards/esp32-c3/src/: main.rs
crates/drivers/: Cargo.toml  README.md
crates/drivers/examples/: basic_poll.rs  classify_snapshot.rs
crates/drivers/src/: lib.rs
crates/drivers/tests/: public_api.rs
hardware/: rx480e-wq.xml
scripts/: esp-port.sh
