[package]
name = "esp32-c3-rx480e-wq"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rx480e-wq-driver = { path = "../../crates/drivers" }
esp-backtrace = { version = "0.18.0", features = ["esp32c3", "panic-handler", "println"] }
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32c3", "log-04"] }
log = "0.4.28"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
