[package]
name = "rx480e-wq-driver"
version = "0.2.0"
edition.workspace = true
license.workspace = true
readme = "README.md"
description = "no_std embedded-hal driver that classifies RX480E-WQ D0-D3/VT output pins as structured state"
repository = "https://github.com/naoNao89/esp-rx480e-wq-rs"
homepage = "https://github.com/naoNao89/esp-rx480e-wq-rs"
documentation = "https://docs.rs/rx480e-wq-driver"
keywords = ["rx480", "rx480e", "embedded-hal", "rf", "gpio"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "1"

[package.metadata.docs.rs]
targets = []
